syntax = "proto3";

package inventory.v1;

option java_multiple_files = true;
option java_package = "com.serendibmall.inventory.v1";
option java_outer_classname = "InventoryProto";

service InventoryService {
  // Check stock for a specific product
  rpc GetStock (GetStockRequest) returns (StockResponse);
  
  // Batch check stock for multiple products (useful for cart/checkout)
  rpc GetBatchStock (GetBatchStockRequest) returns (BatchStockResponse);
}

message GetStockRequest {
  string product_id = 1;
}

message StockResponse {
  string product_id = 1;
  int32 quantity = 2;
  bool is_available = 3;
}

message GetBatchStockRequest {
  repeated string product_ids = 1;
}

message BatchStockResponse {
  repeated StockResponse stocks = 1;
}
